<project
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.tapestry5inaction</groupId>
    <artifactId>tapestry5inaction</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <inceptionYear>2010</inceptionYear>
    <name>Tapestry 5 in Action</name>

    <properties>
        <tapestry-release-version>5.3-beta-24</tapestry-release-version>
        <cobertura-plugin-version>2.2</cobertura-plugin-version>
    </properties>

    <modules>
        <module>tlog</module>
    </modules>

    <developers>
        <developer>
            <id>drobiazko</id>
            <name>Igor Drobiazko</name>
            <email>drobiazko@apache.org</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.apache.tapestry</groupId>
                <artifactId>tapestry-core</artifactId>
                <version>${tapestry-release-version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>log4j</groupId>
                        <artifactId>log4j</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-log4j12</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.apache.tapestry</groupId>
                <artifactId>tapestry-hibernate</artifactId>
                <version>${tapestry-release-version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.tapestry</groupId>
                <artifactId>tapestry-upload</artifactId>
                <version>${tapestry-release-version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.tapestry</groupId>
                <artifactId>tapestry-kaptcha</artifactId>
                <version>${tapestry-release-version}</version>
            </dependency>

            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>servlet-api</artifactId>
                <version>2.5</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>0.9.26</version>
            </dependency>

            <dependency>
                <groupId>org.apache.tapestry</groupId>
                <artifactId>tapestry-test</artifactId>
                <version>${tapestry-release-version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>5.12.1</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.easymock</groupId>
                <artifactId>easymock</artifactId>
                <version>2.4</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>hsqldb</groupId>
                <artifactId>hsqldb</artifactId>
                <version>1.8.0.7</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                    <optimize>true</optimize>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/conf/testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>-Xmx500m -XX:MaxPermSize=256m -Dtapestry.production-mode=false</argLine>
                    <redirectTestOutputToFile>false</redirectTestOutputToFile>
                </configuration>
            </plugin>
            <!-- This gets the plugin to clean up the cobertura.ser file left in the root directory. -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>${cobertura-plugin-version}</version>
                <executions>
                    <execution>
                        <id>clean</id>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-site-plugin</artifactId>
                <version>2.0-beta-5</version>
            </plugin>

        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>${cobertura-plugin-version}</version>
            </plugin>

        </plugins>
    </reporting>

    <repositories>

        <!-- This repository is only needed when the tapestry-release-version is
              a snapshot release. -->
        <repository>
            <id>tapestry-snapshots</id>
            <url>http://repository.apache.org/snapshots/</url>
        </repository>

        <repository>
            <id>apache-staging</id>
            <url>https://repository.apache.org/content/repositories/staging/</url>
        </repository>

        <repository>
            <id>codehaus.snapshots</id>
            <url>http://snapshots.repository.codehaus.org</url>
        </repository>
        <repository>
            <id>tapx-stable</id>
            <url>http://howardlewisship.com/repository/</url>
        </repository>
        <repository>
            <id>tapx-snapshot</id>
            <url>http://howardlewisship.com/snapshot-repository</url>
        </repository>

    </repositories>

    <pluginRepositories>

        <!-- As above, this can be commented out when access to the snapshot version
              of a Tapestry Maven plugin is not required. -->
        <pluginRepository>
            <id>tapestry-snapshots</id>
            <url>http://repository.apache.org/snapshots/</url>
        </pluginRepository>

    </pluginRepositories>
</project>
